force-app/main/default/objects/Venta__c/Venta__c.object-meta.xml
<CustomObject>
    <label>Pedido</label>
    <nameField>
        <displayFormat>V-{0}</displayFormat>
        <label>Pedidos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>