force-app/main/default/objects/Venta__c/fields/C_digo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_cliente__c</fullName>
    <externalId>true</externalId>
    <label>Código de cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>