force-app/main/default/objects/Venta__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <type>TextArea</type>
</CustomField>