force-app/main/default/objects/Venta__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Ventas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>