force-app/main/default/objects/Venta__c/fields/cuenta_con_venta_activa__c.field-meta.xml
<CustomField>
    <fullName>cuenta_con_venta_activa__c</fullName>
    <formula>AND(
Total_Venta__c &gt; 0, Value(Mes_venta__c) = MONTH(Fecha_de_Venta__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cuenta con venta activa</label>
    <type>Checkbox</type>
</CustomField>