force-app/main/default/objects/Venta__c/fields/Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Domicilio__c</fullName>
    <label>Domicilio</label>
    <type>TextArea</type>
</CustomField>