force-app/main/default/objects/Venta__c/fields/Fecha_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Venta__c</fullName>
    <label>Fecha de Venta</label>
    <type>Date</type>
</CustomField>