force-app/main/default/objects/Venta__c/fields/Folio_del_Documento__c.field-meta.xml
<CustomField>
    <fullName>Folio_del_Documento__c</fullName>
    <inlineHelpText>Folio del Documento Electrónico</inlineHelpText>
    <label>Folio del Documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>