force-app/main/default/objects/Venta__c/fields/FS_Despacho__c.field-meta.xml
<CustomField>
    <fullName>FS_Despacho__c</fullName>
    <label>FS Despacho</label>
    <length>15</length>
    <type>Text</type>
</CustomField>