force-app/main/default/objects/Venta__c/fields/Mes_venta__c.field-meta.xml
<CustomField>
    <fullName>Mes_venta__c</fullName>
    <formula>text(month( Fecha_de_Venta__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes venta</label>
    <type>Text</type>
</CustomField>