force-app/main/default/objects/Venta__c/fields/Motivo_de_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Rechazo__c</fullName>
    <label>Motivo de Rechazo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>