force-app/main/default/objects/Venta__c/fields/Numero_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Venta__c</fullName>
    <description>Número de Documento de Ventas</description>
    <externalId>true</externalId>
    <label>Numero de Venta SAP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>