force-app/main/default/objects/Venta__c/fields/Pedido_ICBNET__c.field-meta.xml
<CustomField>
    <fullName>Pedido_ICBNET__c</fullName>
    <formula>TEXT( Numero_de_Venta__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido SAP</label>
    <type>Text</type>
</CustomField>