force-app/main/default/objects/Venta__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <formula>Cliente__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario</label>
    <type>Text</type>
</CustomField>