force-app/main/default/objects/Venta__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Región</label>
    <type>TextArea</type>
</CustomField>