force-app/main/default/objects/Venta__c/fields/Total_Venta__c.field-meta.xml
<CustomField>
    <fullName>Total_Venta__c</fullName>
    <label>Total Venta</label>
    <summarizedField>Detalle__c.Valor_Neto__c</summarizedField>
    <summaryForeignKey>Detalle__c.Venta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>