force-app/main/default/objects/Venta__c/fields/Venta_de_mes_en_curso__c.field-meta.xml
<CustomField>
    <fullName>Venta_de_mes_en_curso__c</fullName>
    <formula>IF(
    MONTH(Fecha_de_Venta__c) = MONTH(TODAY()) &amp;&amp; YEAR(Fecha_de_Venta__c) = YEAR(TODAY()),
    &quot;Sí&quot;,
    &quot;No&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venta de mes en curso</label>
    <type>Text</type>
</CustomField>