force-app/main/default/objects/Venta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>C_digo_de_cliente__c</columns>
    <columns>FS_Despacho__c</columns>
    <columns>Fecha_de_Venta__c</columns>
    <columns>Numero_de_Venta__c</columns>
    <columns>Pedido_ICBNET__c</columns>
    <columns>Total_Venta__c</columns>
    <columns>Estado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Fecha_de_Factura__c</columns>
    <columns>Mes_venta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cliente__c</field>
        <operation>contains</operation>
        <value>PIZZERIA TIRAMISU SPA</value>
    </filters>
    <label>All</label>
</ListView>